<resources>
    <string name="app_name">Source Server Manager</string>
    <string name="title_server_list">Server List</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_add_server">Add Server</string>

    <!-- Strings related to Add Server -->
    <string name="prompt_nickname">Server Nickname (Optional)</string>
    <string name="prompt_address">IP / Hostname</string>
    <string name="prompt_port">Port</string>
    <string name="prompt_password">RCON Password</string>
    <string name="action_add_server">Add Server</string>
    <string name="action_add_server_short">Add</string>
    <string name="title_edit_server">Edit Server</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_save_changes_short">Save</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to RCON Activity -->
    <string name="title_activity_server_rcon">ServerRconActivity</string>
    <string name="send_button_text">Send</string>
    <string name="say_button_text">Say</string>
    <string name="action_chat_title">Toggle Chat Mode</string>
    <string name="action_log_title">Toggle Log Mode</string>
    <string name="chat_banner_text">Chat/Log Mode Enabled</string>
    <string name="action_clear_log_title">Clear History</string>
    <string name="remote_disconnect_warning">\n****\nRemote user disabled Chat Mode.\nThis can happen when multiple users are using Source Server Manager on the same server.\nPlease re-enable it if you wish to continue using it\n****\n</string>

    <!-- RCON Responses/Errors -->
    <string name="failedRcon">Failed to send RCON command.\n</string>
    <string name="emptyRcon">RCON response empty (sent successfully).\n</string>
    <string name="badRcon">Incorrect RCON password.\n</string>
    <string name="socketTimeout">Connection timed out.\n</string>
    <string name="noServerMsg">It appears that you do not currently have any servers to choose from, please add your server details by selecting \"Add Server\" from the menu.</string>
    <string name="noIP">No IP has been specified. Did you select a server?\n</string>
    <string name="noPort">No port has been specified. Check your settings.\n</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>
    <string name="pref_title_rcon_timeout">RCON Timeout</string>
</resources>
