<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sourceservermanager.ServerListActivity">
    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:title="@string/action_chat_title"
        android:icon="@drawable/ic_chat_bubble_outline_white_24dp"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_clear_log"
        android:orderInCategory="200"
        android:title="@string/action_clear_log_title"
        android:icon="@drawable/ic_clear_all_white_24dp"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_log"
        android:orderInCategory="300"
        android:title="@string/action_log_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
