<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sourceservermanager.ServerRconActivity"
    tools:showIn="@layout/activity_server_rcon">

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/send_button_text"
            android:onClick="sendButtonClicked" />
        <Button
            android:id="@+id/sayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/say_button_text"
            android:onClick="sayButtonClicked"/>

        <EditText
            android:id="@+id/rconCommand"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_toLeftOf="@id/sendButton"
            android:layout_toRightOf="@id/sayButton"
            android:gravity="left"
            android:singleLine="true"
            android:maxLines="1"
            android:text="" />

    </RelativeLayout>

    <TextView
        android:id="@+id/chatEnabledBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chat_banner_text"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorP2Salmon"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/rconResponseScroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/chatEnabledBanner"
        android:layout_above="@id/InnerRelativeLayout">
        <!--android:layout_below="@+id/logButton" >-->

        <TextView
            android:id="@+id/rconResponse"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:singleLine="false"
            android:typeface="monospace" />
    </ScrollView>
</RelativeLayout>
